subo vista donar

--- a/WebCovid19/WebCovid19.csproj
+++ b/WebCovid19/WebCovid19.csproj
@@ -1934,6 +1934,7 @@
     <Content Include="Views\Necesidades\Referencias.cshtml" />
     <Content Include="Views\Usuario\HistorialDonaciones.cshtml" />
     <Content Include="Views\DonacionMonetaria\DonaMonetaria.cshtml" />
+    <Content Include="Views\DonacionInsumos\Donar.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
