--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -60,6 +60,8 @@
     <Compile Include="DonacionInsumosDao.cs" />
     <Compile Include="DonacionMonetariaDao.cs" />
     <Compile Include="NecesidadesDAO.cs" />
+    <Compile Include="NecesidadesDonacionesInsumosDAO.cs" />
+    <Compile Include="NecesidadesDonacionesMonetariasDAO.cs" />
     <Compile Include="NecesidadValoracionesDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioDao.cs" />
