--- a/Servicios/Servicios.csproj
+++ b/Servicios/Servicios.csproj
@@ -53,10 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ServicioNecesidadesDonacionesInsumos.cs" />
+    <Compile Include="ServicioNecesidadesDonacionesMonetarias.cs" />
     <Compile Include="ServicioNecesidadValoraciones.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicioDenuncia.cs" />
-    <Compile Include="ServicioDonacion.cs" />
+    <Compile Include="ServicioDonacionMonetaria.cs" />
     <Compile Include="ServicioDonacionInsumo.cs" />
     <Compile Include="ServicioNecesidad.cs" />
     <Compile Include="ServicioUsuario.cs" />
