Parte de necesidades 90%
Creacion de necesidades completada. Falta verificar el funcionamiento de la modificacion de necesidades (insumos-monetaria).
Falta agregar la edicion  de las Referencias

--- a/WebApi/bin/WebCovid19.dll.config
+++ b/WebApi/bin/WebCovid19.dll.config
@@ -13,25 +13,25 @@
             name por defecto pone uno muy largo, asi que es mejor ponerle uno mas corto con key adelante-->
 	<!--Si queremos agregar mas bases de datos, puedo hacerlo desde aca, agregando otro 
       <add> entre connectionStrings  -->
-	<!-- Cande 
+	<!-- Cande -->
 	<connectionStrings>
 		<add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TRAINING-05\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>-->
+	</connectionStrings>
 
 
-	<!-- ivan conexion-->
+	<!-- ivan conexion
 <connectionStrings>
 	<add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-</connectionStrings>
+</connectionStrings>-->
 
 <!-- diana conexion 
 	<connectionStrings>
 		<add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=desktop-pv19qva\sqlexpress;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>-->
  
-	<!-- juli conexion
+	<!-- juli conexion-->
 <connectionStrings><add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-EOVA2UPC\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-</connectionStrings>-->
+</connectionStrings>
 
 
 	<appSettings>
