--- a/WebCovid19/WebCovid19.csproj
+++ b/WebCovid19/WebCovid19.csproj
@@ -1935,6 +1935,9 @@
     <Content Include="Views\DonacionInsumos\Donar.cshtml" />
     <Content Include="Views\Necesidades\Modificar.cshtml" />
     <Content Include="Views\DonacionMonetaria\DetalleDeDonacion.cshtml" />
+    <Content Include="Views\Necesidades\ListadoInsumos.cshtml" />
+    <Content Include="Views\Necesidades\ListadoMonetarias.cshtml" />
+    <Content Include="Views\Necesidades\ModificarReferencias.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
