--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -34,9 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DataAnnotationsExtensions, Version=5.0.1.27, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DataAnnotationsExtensions.5.0.1.27\lib\NETFramework40\DataAnnotationsExtensions.dll</HintPath>
-    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -119,6 +116,7 @@
     <Compile Include="ValidationCustom\CheckValidDate.cs" />
     <Compile Include="Views\DonacionesInsumosVM.cs" />
     <Compile Include="Views\EncriptarPassword.cs" />
+    <Compile Include="Views\VMAdministrador.cs" />
     <Compile Include="Views\VMComprobantePago.cs" />
     <Compile Include="Views\VMDatosDeVerificacionDeUsuario.cs" />
     <Compile Include="Views\VMDonacionMonetaria.cs" />
