--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -54,16 +54,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstract\Crud.cs" />
     <Compile Include="Context\TpDBContext.cs" />
     <Compile Include="DenunciasDao.cs" />
     <Compile Include="DonacionInsumosDao.cs" />
     <Compile Include="DonacionMonetariaDao.cs" />
+    <Compile Include="Interface\ICrud.cs" />
     <Compile Include="NecesidadesDAO.cs" />
     <Compile Include="NecesidadesDonacionesInsumosDAO.cs" />
     <Compile Include="NecesidadesDonacionesMonetariasDAO.cs" />
+    <Compile Include="NecesidadesReferenciasDao.cs" />
     <Compile Include="NecesidadValoracionesDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="UsuarioDao.cs" />
   </ItemGroup>
   <ItemGroup>
