--- a/WebCovid19/WebCovid19.csproj
+++ b/WebCovid19/WebCovid19.csproj
@@ -1858,6 +1858,7 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="App_Start\ValidacionesGenerales.cs" />
     <Compile Include="Content\Utilities\ImagenesUtility.cs" />
     <Compile Include="Content\Utilities\StringUtility.cs" />
     <Compile Include="Controllers\DenunciaController.cs" />
@@ -1910,7 +1911,6 @@
     <Content Include="Views\Shared\_BaseLayout.cshtml" />
     <Content Include="Views\Shared\_NecesidadesLayout.cshtml" />
     <Content Include="Views\Shared\NecesidadDonacionInsumos.cshtml" />
-    <Content Include="Views\NecesidadesDonacionesMonetarias\NecesidadesDonacionesMonetarias.cshtml" />
     <Content Include="Views\DonacionMonetaria\SeleccionComprobanteDePago.cshtml" />
     <Content Include="Views\Usuario\Administrador.cshtml" />
     <Content Include="Views\Error\Index.cshtml" />
@@ -1948,7 +1948,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\Js\" />
-    <Folder Include="Views\NecesidadDonacionInsumos\" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\index.d.ts" />
