--- a/WebApi/Web.config
+++ b/WebApi/Web.config
@@ -15,15 +15,15 @@
 	</connectionStrings>-->
 
 
-	<!-- ivan conexion
+	<!-- ivan conexion -->
 <connectionStrings>
 	<add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-</connectionStrings>-->
+</connectionStrings>
 
-	<!-- diana conexion-->
+	<!-- diana conexion
 	<connectionStrings>
 		<add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=desktop-pv19qva\sqlexpress;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings> 
+	</connectionStrings>  -->
 
 	<!-- juli conexion
 <connectionStrings><add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-EOVA2UPC\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
